--- a/index.html
+++ b/index.html
@@ -452,91 +452,7 @@
               </div>
             </div>
           </div>
-          <div class="card">
-            <div class="card-content">
-              <h4 class="brown-text light">Build Tools</h4>
-              <div class="row text-center">
-                <div class="col s4 m2">
-                  <img
-                    alt=""
-                    src="static/img/webpack.png"
-                    class="responsive-img"
-                  />Webpack
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt=""
-                    src="static/img/gulp.png"
-                    class="responsive-img"
-                  />Gulp
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt=""
-                    src="static/img/grunt.png"
-                    class="responsive-img"
-                  />Grunt
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt=""
-                    src="static/img/bower.png"
-                    class="responsive-img"
-                  />Bower
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="card">
-            <div class="card-content">
-              <h4 class="brown-text light">Databases</h4>
-              <div class="row text-center">
-                <div class="col s4 m2">
-                  <img
-                    alt="AWS"
-                    src="static/img/aws.png"
-                    class="responsive-img"
-                  />DynamoDB
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt="sql"
-                    src="static/img/sql.png"
-                    class="responsive-img"
-                  />SQL
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt="MongoDB"
-                    src="static/img/mongodb.png"
-                    class="responsive-img"
-                  />MongoDB
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt="PostgresDB"
-                    src="static/img/postgresDB.png"
-                    class="responsive-img"
-                  />PostgresDB
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt="Postico"
-                    src="static/img/postico.png"
-                    class="responsive-img"
-                  />Postico
-                </div>
-
-                <div class="col s4 m2">
-                  <img
-                    alt="robo3t"
-                    src="static/img/robo3t.png"
-                    class="responsive-img"
-                  />Robo3T
-                </div>
-              </div>
-            </div>
-          </div>
+       
           <div class="card">
             <div class="card-content">
               <h4 class="brown-text light">Back-End</h4>
@@ -551,42 +467,126 @@
                 <div class="col s4 m2">
                   <img
                     alt="ExpressJs"
-                    src="static/img/express-js.png"
+                    src="static/img/javascript.png"
                     class="responsive-img"
-                  />ExpressJs
+                  />ExpressJS
                 </div>
                 <div class="col s4 m2">
-                  <img
-                    alt="MongoDB"
-                    src="static/img/mongodb.png"
-                    class="responsive-img"
-                  />MongoDB
+                    <img
+                      alt="CommandLine"
+                      src="static/img/commandline.png"
+                      class="responsive-img"
+                    />Command Line
+                </div>   
+                <div class="col s4 m2">
+                    <img
+                      alt="Linux"
+                      src="static/img/linux.png"
+                      class="responsive-img"
+                    />Linux
+                </div> 
+                <div class="col s4 m2">
+                    <img
+                      alt="RestAPI"
+                      src="static/img/restAPI.png"
+                      class="responsive-img"
+                    />REST API
                 </div>
                 <div class="col s4 m2">
-                  <img
-                    alt="AWS"
-                    src="static/img/dynamodb.png"
-                    class="responsive-img"
-                  />AWS
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt="sql"
-                    src="static/img/sql.png"
-                    class="responsive-img"
-                  />SQL
-                </div>
-                <div class="col s4 m2">
-                  <img
-                    alt="robo3t"
-                    src="static/img/robo3t.png"
-                    class="responsive-img"
-                  />Robo3T
-                </div>
+                    <img
+                      alt="Graphql"
+                      src="static/img/graphql.png"
+                      class="responsive-img"
+                    />GraphQL
+                </div>               
               </div>
             </div>
           </div>
-
+          <div class="card">
+              <div class="card-content">
+                <h4 class="brown-text light">Databases</h4>
+                <div class="row text-center">
+                  <div class="col s4 m2">
+                    <img
+                      alt="AWS"
+                      src="static/img/aws.png"
+                      class="responsive-img"
+                    />DynamoDB
+                  </div>
+                  <div class="col s4 m2">
+                    <img
+                      alt="sql"
+                      src="static/img/sql.png"
+                      class="responsive-img"
+                    />SQL
+                  </div>
+                  <div class="col s4 m2">
+                    <img
+                      alt="MongoDB"
+                      src="static/img/mongodb.png"
+                      class="responsive-img"
+                    />MongoDB
+                  </div>
+                  <div class="col s4 m2">
+                    <img
+                      alt="PostgresDB"
+                      src="static/img/postgresDB.png"
+                      class="responsive-img"
+                    />PostgresDB
+                  </div>
+                  <div class="col s4 m2">
+                    <img
+                      alt="Postico"
+                      src="static/img/postico.png"
+                      class="responsive-img"
+                    />Postico
+                  </div>
+  
+                  <div class="col s4 m2">
+                    <img
+                      alt="robo3t"
+                      src="static/img/robo3t.png"
+                      class="responsive-img"
+                    />Robo3T
+                  </div>
+                </div>
+              </div>
+            </div>
+          <div class="card">
+              <div class="card-content">
+                <h4 class="brown-text light">Build Tools</h4>
+                <div class="row text-center">
+                  <div class="col s4 m2">
+                    <img
+                      alt=""
+                      src="static/img/webpack.png"
+                      class="responsive-img"
+                    />Webpack
+                  </div>
+                  <div class="col s4 m2">
+                    <img
+                      alt=""
+                      src="static/img/gulp.png"
+                      class="responsive-img"
+                    />Gulp
+                  </div>
+                  <div class="col s4 m2">
+                    <img
+                      alt=""
+                      src="static/img/grunt.png"
+                      class="responsive-img"
+                    />Grunt
+                  </div>
+                  <div class="col s4 m2">
+                    <img
+                      alt=""
+                      src="static/img/bower.png"
+                      class="responsive-img"
+                    />Bower
+                  </div>
+                </div>
+              </div>
+            </div>
           <div class="card">
             <div class="card-content">
               <h4 class="brown-text light">CMS</h4>
@@ -680,7 +680,7 @@
                     alt=""
                     src="static/img/sourceTree.png"
                     class="responsive-img"
-                  />Smart Git
+                  />Smart GIT
                 </div>
                 <div class="col s4 m2">
                   <img
