--- a/index.html
+++ b/index.html
@@ -737,12 +737,12 @@
                     </li>
                     <li>User <strong> Validation</strong> Express Validator</li>
                     <li><strong>UX / UI </strong>Connect-Flash Messages</li>
-                    <li><strong>Digital Ocean</strong>Deployment</li>
+                    <li><strong>Heroku</strong>Deployment</li>
                   </ul>
                   <div class="card-action">
                     <a
                       aria-label="Visit Code Hosted On Cloud Server"
-                      href="https://sheltered-chamber-10022.herokuapp.com/"
+                      href="https://crudmusiplaylist.herokuapp.com/users/register"
                       target="_blank"
                       data-position="top"
                       data-tooltip="View Online"
@@ -797,12 +797,11 @@
                       <strong>Concurrently</strong> running Front And Back End
                       Servers
                     </li>
-                    <li><strong>Digital Ocean</strong> Deployment</li>
                   </ul>
                   <div class="card-action">
                     <a
                       aria-label="Visit Code Hosted On Cloud Server"
-                      href="http://159.65.155.169/"
+                      href="https://fullstack-mern.herokuapp.com/"
                       target="_blank"
                       data-position="top"
                       data-tooltip="View Online"
@@ -859,7 +858,7 @@
                   <div class="card-action">
                     <a
                       aria-label="Visit Code Hosted On Cloud Server"
-                      href="https://mysterious-forest-55765.herokuapp.com/users/register"
+                      href="https://crud-app-music-playlist.herokuapp.com/users/register"
                       target="_blank"
                       data-position="top"
                       data-tooltip="View Online"
@@ -997,7 +996,7 @@
                 </div>
                 <div class="card-content">
                   <span class="card-title activator teal-text hoverline"
-                    >Live Chat Application<i
+                    >WhatsApp<i
                       class="mdi-navigation-more-vert right"
                     ></i
                   ></span>
@@ -1014,13 +1013,14 @@
                     <li><strong>Socket.IO</strong> Browser And Server</li>
                     <li><strong>ExpressJs</strong> NodeJs framework</li>
                     <li><strong>NodeJs</strong> Backend</li>
-                    <li><strong>Heroku</strong>Deployment</li>
+                    <li><strong>Heroku</strong> Deployment</li>
                   </ul>
                   <div class="card-action">
                     <a
                       aria-label="Visit Code Hosted On Cloud Server"
                       href="https://pacific-springs-28604.herokuapp.com"
                       target="_blank"
+                      onclick="location.href='https://pacific-springs-28604.herokuapp.com'"
                       data-position="top"
                       data-tooltip="View Online"
                       class="btn-floating btn-large waves-effect waves-light brown tooltipped"
