Added Skills - influxDB

--- a/index.html
+++ b/index.html
@@ -523,19 +523,20 @@
                 </div>
                 <div class="col s4 m2">
                   <img
+                    alt="influxDB"
+                    src="static/img/influxDB.png"
+                    class="responsive-img"
+                  />Time Series DB
+                </div>
+                <div class="col s4 m2">
+                  <img
                     alt="Postico"
                     src="static/img/postico.png"
                     class="responsive-img"
                   />Postico
                 </div>
 
-                <div class="col s4 m2">
-                  <img
-                    alt="robo3t"
-                    src="static/img/robo3t.png"
-                    class="responsive-img"
-                  />Robo3T
-                </div>
+                
               </div>
             </div>
           </div>
