Aws Skills Added

--- a/index.html
+++ b/index.html
@@ -486,6 +486,13 @@
                     class="responsive-img"
                   />GraphQL
                 </div>
+                <div class="col s4 m2">
+                  <img
+                    alt="Serverless"
+                    src="static/img/aws_serverless.png"
+                    class="responsive-img"
+                  />Architecture
+                </div>
               </div>
             </div>
           </div>
@@ -683,6 +690,34 @@
                     src="static/img/graphql.png"
                     class="responsive-img"
                   />Graph QL
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt="aws-lambda"
+                    src="static/img/aws-lambda.png"
+                    class="responsive-img"
+                  />AWS Lambda
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="static/img/ec2.png"
+                    class="responsive-img"
+                  />EC2
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="static/img/IAM.png"
+                    class="responsive-img"
+                  />AWS IAM
+                </div>
+                <div class="col s4 m2">
+                  <img
+                    alt=""
+                    src="static/img/aws-security.png"
+                    class="responsive-img"
+                  />AWS Security Groups
                 </div>
               </div>
             </div>
