--- a/index.html
+++ b/index.html
@@ -1194,9 +1194,9 @@
                   <div class="card-action">
                     <a
                       aria-label="Visit Code Hosted On Cloud Server"
-                      href="https://pacific-springs-28604.herokuapp.com"
+                      href="http://52.90.94.13:5000/"
                       target="_blank"
-                      onclick="location.href='https://pacific-springs-28604.herokuapp.com'"
+                      onclick="location.href='http://52.90.94.13:5000/'"
                       data-position="top"
                       data-tooltip="View Online"
                       class="btn-floating btn-large waves-effect waves-light brown tooltipped"
