Updated Work Experience

--- a/index.html
+++ b/index.html
@@ -1259,25 +1259,19 @@
               <h6>Responsibilities</h6>
               <ul>
                 <li>
-                  Developed a Highly Responsive Web and mobile Application Using
-                  The Mern Stack.
+                  Developed a Highly Responsive Web and Mobile Application Using
+                  PostgresDB, Express, React and Node JavaScript.
                 </li>
                 <li>
-                  Improved Core Code Base with the latest javascript libraries,
-                  design frameworks ( Ant Design / Grommet - React ) and central
-                  state management ( Mobx / Redux ).
+                  Excellent working knowledge of HTML5, CSS3, JavaScript (
+                  Promises, ES6, Async Await, Promises, Closures, Hoisting etc. ), and React
                 </li>
                 <li>
-                  Constructed Visualizations ( ChartJs ) to clearly depict vast
-                  amounts of User's Data.
-                </li>
-                <li>
-                  Planned, designed and created Database Schemas for persisting
+                  Gathered Requirement from relevant stakeholders to plan, design and setup Database Schemas for persisting
                   the application's data.
                 </li>
                 <li>
-                  Deployed and Managed Applications on AWS servers via SSH
-                  commands.
+                 Continuous Deployment And Continuous Integration Using Netlify.
                 </li>
                 <li>
                   Experience with NodeJs, Npm package manager, JavaScript
@@ -1285,43 +1279,36 @@
                 </li>
                 <li>
                   Developed and architected the Application Programming
-                  Interfaces ( API ) using GraphQL And RestAPI.
+                  Interface ( API ) using GraphQL.
                 </li>
                 <li>
                   Developed a flexible and well-structured Front-End
-                  Architecture, along with the GraphQL APIs to support it.
+                  Architecture.
                 </li>
-
                 <li>
                   Maintained Source Code on Github Private Repo, collaborating
                   with members of the development team.
                 </li>
-
                 <li>Performed Unit Testing ( Jest / Enzyme )</li>
-
                 <li>Debugged application using Chrome Dev Tools.</li>
-
                 <li>
                   Worked in a Agile Software Development Life Cycle. ( Daily
-                  Stand ups and Sprints )
+                  Stand ups and 2 Week Sprints )
                 </li>
-
                 <li>
                   Self-Motivated, Detail Oriented with strong Analytical and
                   Problem-Solving skills, with the ability to learn quickly and
                   take initiative to take on project requirement changes.
                 </li>
-
                 <li>Adhered to Industry’s Best Practices in UI/UX designs.</li>
-
                 <li>
-                  Developed Web Applications using the Mern stack technologies.
-                  Mongo - Express - React - Node
+                  Improved Core Code Base with the latest javascript libraries,
+                  UI design frameworks ( Grommet ) and Central
+                  state management ( Mobx ).
                 </li>
-
                 <li>
-                  Excellent working knowledge of HTML5, CSS3, JavaScript (AJAX,
-                  Promises, ES6, Async Await), and React
+                  Constructed Visualizations ( ChartJs ) to clearly depict vast
+                  amounts of User's Data.
                 </li>
                 <li>
                   Strong experience building responsive websites.
@@ -1330,7 +1317,6 @@
                   Developed a strong foundation in Programming Fundamentals,
                   Object Oriented Programming and Object Relational Mapping.
                 </li>
-
                 <li>
                   Worked with Databases ( SQL and NoSQL ) PostgresDB and
                   MongoDB. Leveraged database Tools - Robo3T & Postico
@@ -1345,23 +1331,20 @@
                   using SSH protocol.
                 </li>
                 <li>
-                  Developed a working knowledge of Data Structure and Algos.
+                  Developed a working knowledge of Data Structure and Algorithms.
                 </li>
-
                 <li>
                   Experience working with Content Management Systems ( WordPress
                   & OpenCart ).
                 </li>
-
                 <li>
                   Lead the Group Project using an Agile Software Development
                   Life Cycle.
                 </li>
                 <li>
-                  Created WireFrames and a Schema to capture all the project
+                  Created WireFrames to capture all the project
                   requirements before writing code for the implementation.
                 </li>
-
                 <li>
                   Leveraged Git and SmartGit to monitor commit version history.
                 </li>
@@ -1415,70 +1398,58 @@
               <ul>
                 <li>
                   Developed a Highly Responsive Web and Mobile Application Using
-                  AWS Serverless Architecture.
-                </li>
-                <li>
-                  Setup Mobx for central state management with actions and
-                  observeable.
+                  the Mern Stack. Mongo - Express – React – Node JavaScript.
                 </li>
                 <li>
                   Developed and architected the Application Programming
-                  Interfaces ( API ) using GraphQL.
-                </li>
-                <li>
-                  Build Application using Influx DB.
+                  Interfaces ( API ) using REST API.
                 </li>
                 <li>
                   Planned, designed and created Database Schemas for persisting
                   the application's data in a organized and scalable fashion.
                 </li>
                 <li>
-                  Excellent working knowledge of HTML5, CSS3, JavaScript (AJAX,
-                  Promises, ES6, Async Await), and React
+                  Excellent working knowledge of HTML5, CSS3, JavaScript (
+                  Promises, ES6, Async Await, Promises, Closures, Hoisting etc. ), and React
+                </li>
+                <li>
+                  Setup Redux State Management for Managing the Application's State with Dispatchers and Reducers.
                 </li>
                 <li>
                   Experience with NodeJs, Npm package manager, JavaScript
-                  libraries, Build Tools and bundlers ( Webpack ).
+                  libraries, Build Tools and Bundlers ( Webpack ).
                 </li>
                 <li>
                   Worked with Databases ( SQL and NoSQL ) PostgresDB and
-                  MongoDB. Leveraged database Tools - Robo3T & Postico
+                  MongoDB. Leveraged database Tools - Postico & Robo3T
                 </li>
                 <li>
                   Developed a flexible and well-structured Front-End
-                  Architecture, along with the GraphQL APIs to support it.
+                  Architecture.
                 </li>
-
                 <li>
                   Maintained Source Code on Github Private Repo, collaborating
                   with members of the development team.
                 </li>
-
                 <li>Performed Unit Testing ( Jest / Enzyme )</li>
-
                 <li>Debugged application using Chrome Dev Tools.</li>
-
                 <li>
                   Worked in a Agile Software Development Life Cycle. ( Daily
                   Stand ups and Sprints )
                 </li>
-
                 <li>
                   Self-Motivated, Detail Oriented with Strong Problem-Solving
-                  skills, with the ability to learn quickly and take initiative
+                  skills ( Data Structures And Algorithms), with the ability to learn quickly and take initiative
                   to facilitate project requirements change.
                 </li>
-
                 <li>Adhered to Industry’s Best Practices in UI/UX designs.</li>
-
                 <li>
                   Strong experience building responsive websites.
                 </li>
                 <li>
-                  Developed a strong foundation in Programming Fundamentals,
-                  Object Oriented Programming and Object Relational Mapping.
+                  Developed a strong foundation in Programming Fundamentals and
+                  Object Oriented Programming.
                 </li>
-
                 <li>
                   Built application using best practices of the MVC ( Model View
                   Control ) architecture.
@@ -1489,23 +1460,13 @@
                   protocol.
                 </li>
                 <li>
-                  Developed a working knowledge of Data Structure and Algos.
-                </li>
-
-                <li>
-                  Experience with Content Management Systems ( WordPress &
-                  OpenCart ).
-                </li>
-
-                <li>
                   Lead the Group Project using an Agile Software Development
                   Life Cycle.
                 </li>
                 <li>
-                  Created WireFrames and a Schema to capture all the project
+                  Created WireFrames to clearly capture the business
                   requirements before writing code for the implementation.
                 </li>
-
                 <li>
                   Leveraged Git and SmartGit to monitor commit version history.
                 </li>
