Updated Work Experience

--- a/index.html
+++ b/index.html
@@ -1264,7 +1264,7 @@
                 </li>
                 <li>
                   Excellent working knowledge of HTML5, CSS3, JavaScript (
-                  Promises, ES6, Async Await, Promises, Closures, Hoisting etc. ), and React
+                  Promises, ES6, Async Await, Promises, Closures, Hoisting etc. ), React and Node.
                 </li>
                 <li>
                   Gathered Requirement from relevant stakeholders to plan, design and setup Database Schemas for persisting
@@ -1563,16 +1563,9 @@
                   cases for <strong>User Acceptance Testing (UAT)</strong>.
                 </li>
                 <li>
-                  Meticulously create, update, analyze and monitor daily
+                  Meticulously created, updated, analyzed and monitored daily
                   logistics reports for <strong>Samsung</strong> and Saputo
                   Dairy Products.
-                </li>
-              </ul>
-              <h6>Accomplishments</h6>
-              <ul>
-                <li>
-                  Managed 5 Junior Supply Chain Coordinators, Reporting Directly
-                  to Samsung's Supply Chain Head Of Operations.
                 </li>
               </ul>
             </div>
